<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="edu.uw.tacoma.css.mqunell.webserviceslab.CourseActivity">

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="200"
        android:title="@string/action_about"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_animations"
        android:orderInCategory="300"
        android:title="@string/action_animations"
        app:showAsAction="never" />



</menu>