<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AnimationsActivity">

    <TextView
        android:id="@+id/animate_me"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@color/uwPurple"
        android:gravity="center"
        android:text="@string/animating"
        android:textAlignment="center"
        android:textColor="@color/uwGold" />

    <LinearLayout
        android:layout_margin="10dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_spin"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:onClick="animate"
            android:text="@string/btn_spin_text" />

        <Button
            android:id="@+id/btn_move"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:onClick="animate"
            android:text="@string/btn_move_text" />

        <Button
            android:id="@+id/btn_fade"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:onClick="animate"
            android:text="@string/btn_fade_text" />

    </LinearLayout>

</LinearLayout>